The lab is done

--- a/module-1/lab-numpy/your-code/lab-numpy.ipynb
+++ b/module-1/lab-numpy/your-code/lab-numpy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,31 +34,25 @@
      "text": [
       "The numpy's version is 1.17.3\n",
       "blas_mkl_info:\n",
-      "  NOT AVAILABLE\n",
-      "blis_info:\n",
-      "  NOT AVAILABLE\n",
-      "openblas_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "    libraries = ['mkl_rt', 'pthread']\n",
+      "    library_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/include']\n",
       "blas_opt_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "    libraries = ['mkl_rt', 'pthread']\n",
+      "    library_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/include']\n",
       "lapack_mkl_info:\n",
-      "  NOT AVAILABLE\n",
-      "openblas_lapack_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "    libraries = ['mkl_rt', 'pthread']\n",
+      "    library_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/include']\n",
       "lapack_opt_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "    libraries = ['mkl_rt', 'pthread']\n",
+      "    library_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['/Users/borjauria/miniconda3/envs/ironhack_env/include']\n",
       "None\n"
      ]
     }
@@ -82,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,20 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.5059929  0.96234207 0.29135818 0.93129373 0.09923646]\n",
-      "  [0.91882161 0.80979227 0.35576494 0.51261907 0.21365027]\n",
-      "  [0.08451723 0.9586303  0.71160032 0.92298529 0.96094698]]\n",
+      "[[[0.41929259 0.73578885 0.80842069 0.24482095 0.37292415]\n",
+      "  [0.84379975 0.76310282 0.77074916 0.06021745 0.72869042]\n",
+      "  [0.2893372  0.21509206 0.91584989 0.85811977 0.48101094]]\n",
       "\n",
-      " [[0.88344735 0.90706979 0.33015663 0.98471268 0.02881393]\n",
-      "  [0.97152974 0.50688605 0.981655   0.86990314 0.2078938 ]\n",
-      "  [0.41048346 0.55964842 0.33277885 0.06417969 0.18998765]]]\n"
+      " [[0.87145984 0.3301851  0.5527052  0.54632102 0.14678472]\n",
+      "  [0.91140174 0.16621195 0.04135208 0.52852218 0.54267907]\n",
+      "  [0.22113063 0.39438675 0.20307375 0.91976928 0.18218108]]]\n"
      ]
     }
    ],
@@ -132,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,23 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The size of array a is 30 and the size of array b is 30, a and b are the same size\n"
+     ]
     }
    ],
    "source": [
     "#your code here\n",
-    "np.array_equal(a,b)"
+    "print(f'The size of array a is {a.size} and the size of array b is {b.size}', end='')\n",
+    "\n",
+    "if a.size == b.size:\n",
+    "    print(', a and b are the same size')\n",
+    "    \n",
+    "else:\n",
+    "    print(', a and b are not the same size')"
    ]
   },
   {
@@ -215,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +243,7 @@
        "        [1., 1., 1., 1., 1.]]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,22 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1.5059929 , 1.96234207, 1.29135818, 1.93129373, 1.09923646],\n",
-       "        [1.91882161, 1.80979227, 1.35576494, 1.51261907, 1.21365027],\n",
-       "        [1.08451723, 1.9586303 , 1.71160032, 1.92298529, 1.96094698]],\n",
+       "array([[[1.41929259, 1.73578885, 1.80842069, 1.24482095, 1.37292415],\n",
+       "        [1.84379975, 1.76310282, 1.77074916, 1.06021745, 1.72869042],\n",
+       "        [1.2893372 , 1.21509206, 1.91584989, 1.85811977, 1.48101094]],\n",
        "\n",
-       "       [[1.88344735, 1.90706979, 1.33015663, 1.98471268, 1.02881393],\n",
-       "        [1.97152974, 1.50688605, 1.981655  , 1.86990314, 1.2078938 ],\n",
-       "        [1.41048346, 1.55964842, 1.33277885, 1.06417969, 1.18998765]]])"
+       "       [[1.87145984, 1.3301851 , 1.5527052 , 1.54632102, 1.14678472],\n",
+       "        [1.91140174, 1.16621195, 1.04135208, 1.52852218, 1.54267907],\n",
+       "        [1.22113063, 1.39438675, 1.20307375, 1.91976928, 1.18218108]]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,27 +298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.5059929  0.96234207 0.29135818 0.93129373 0.09923646]\n",
-      "  [0.91882161 0.80979227 0.35576494 0.51261907 0.21365027]\n",
-      "  [0.08451723 0.9586303  0.71160032 0.92298529 0.96094698]]\n",
+      "[[[0.41929259 0.73578885 0.80842069 0.24482095 0.37292415]\n",
+      "  [0.84379975 0.76310282 0.77074916 0.06021745 0.72869042]\n",
+      "  [0.2893372  0.21509206 0.91584989 0.85811977 0.48101094]]\n",
       "\n",
-      " [[0.88344735 0.90706979 0.33015663 0.98471268 0.02881393]\n",
-      "  [0.97152974 0.50688605 0.981655   0.86990314 0.2078938 ]\n",
-      "  [0.41048346 0.55964842 0.33277885 0.06417969 0.18998765]]]\n",
-      "[[[1.5059929  1.96234207 1.29135818 1.93129373 1.09923646]\n",
-      "  [1.91882161 1.80979227 1.35576494 1.51261907 1.21365027]\n",
-      "  [1.08451723 1.9586303  1.71160032 1.92298529 1.96094698]]\n",
+      " [[0.87145984 0.3301851  0.5527052  0.54632102 0.14678472]\n",
+      "  [0.91140174 0.16621195 0.04135208 0.52852218 0.54267907]\n",
+      "  [0.22113063 0.39438675 0.20307375 0.91976928 0.18218108]]]\n",
+      "[[[1.41929259 1.73578885 1.80842069 1.24482095 1.37292415]\n",
+      "  [1.84379975 1.76310282 1.77074916 1.06021745 1.72869042]\n",
+      "  [1.2893372  1.21509206 1.91584989 1.85811977 1.48101094]]\n",
       "\n",
-      " [[1.88344735 1.90706979 1.33015663 1.98471268 1.02881393]\n",
-      "  [1.97152974 1.50688605 1.981655   1.86990314 1.2078938 ]\n",
-      "  [1.41048346 1.55964842 1.33277885 1.06417969 1.18998765]]]\n"
+      " [[1.87145984 1.3301851  1.5527052  1.54632102 1.14678472]\n",
+      "  [1.91140174 1.16621195 1.04135208 1.52852218 1.54267907]\n",
+      "  [1.22113063 1.39438675 1.20307375 1.91976928 1.18218108]]]\n"
      ]
     }
    ],
@@ -340,13 +337,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.41929259, 0.73578885, 0.80842069, 0.24482095, 0.37292415],\n",
+       "        [0.84379975, 0.76310282, 0.77074916, 0.06021745, 0.72869042],\n",
+       "        [0.2893372 , 0.21509206, 0.91584989, 0.85811977, 0.48101094]],\n",
+       "\n",
+       "       [[0.87145984, 0.3301851 , 0.5527052 , 0.54632102, 0.14678472],\n",
+       "        [0.91140174, 0.16621195, 0.04135208, 0.52852218, 0.54267907],\n",
+       "        [0.22113063, 0.39438675, 0.20307375, 0.91976928, 0.18218108]]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#your code here\n",
     "#e = np.multiply(a,c)\n",
-    "e = a * c"
+    "e = a * c\n",
+    "e"
    ]
   },
   {
@@ -358,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +382,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9847126759839266\n",
-      "0.028813925238303617\n",
-      "0.5822899270258068\n"
+      "0.9197692788760209\n",
+      "0.041352076734675225\n",
+      "0.5021793697382928\n"
      ]
     }
    ],
@@ -420,29 +435,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1.5059929 , 1.96234207, 1.29135818, 1.93129373, 1.09923646],\n",
-       "        [1.91882161, 1.80979227, 1.35576494, 1.51261907, 1.21365027],\n",
-       "        [1.08451723, 1.9586303 , 1.71160032, 1.92298529, 1.96094698]],\n",
+       "array([[[1.41929259, 1.73578885, 1.80842069, 1.24482095, 1.37292415],\n",
+       "        [1.84379975, 1.76310282, 1.77074916, 1.06021745, 1.72869042],\n",
+       "        [1.2893372 , 1.21509206, 1.91584989, 1.85811977, 1.48101094]],\n",
        "\n",
-       "       [[1.88344735, 1.90706979, 1.33015663, 1.98471268, 1.02881393],\n",
-       "        [1.97152974, 1.50688605, 1.981655  , 1.86990314, 1.2078938 ],\n",
-       "        [1.41048346, 1.55964842, 1.33277885, 1.06417969, 1.18998765]]])"
+       "       [[1.87145984, 1.3301851 , 1.5527052 , 1.54632102, 1.14678472],\n",
+       "        [1.91140174, 1.16621195, 1.04135208, 1.52852218, 1.54267907],\n",
+       "        [1.22113063, 1.39438675, 1.20307375, 1.91976928, 1.18218108]]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#your code here\n",
-    "d=np.empty((2,3,5))\n",
+    "d = np.empty((2,3,5))\n",
     "d"
    ]
   },
@@ -461,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -516,11 +531,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n"
+    "d = ([[[1.85836099, 1.67064465, 1.62576044, 1.40243961, 1.88454931],\n",
+    "        [1.75354326, 1.69403643, 1.36729252, 1.61415071, 1.12104981],\n",
+    "        [1.72201435, 1.1862918 , 1.87078449, 1.7726778 , 1.88180042]],\n",
+    "       [[1.44747908, 1.31673383, 1.02000951, 1.52218947, 1.97066381],\n",
+    "        [1.79129243, 1.74983003, 1.96028037, 1.85166831, 1.65450881],\n",
+    "        [1.18068344, 1.9587381 , 1.00656599, 1.93402165, 1.73514584]]])\n",
+    "#Your f should be:\n",
+    "\n",
+    "f = ([[[ 75.,  75.,  75.,  25.,  75.],\n",
+    "       [ 75.,  75.,  25.,  25.,  25.],\n",
+    "       [ 75.,  25.,  75.,  75.,  75.]],\n",
+    "       [[ 25.,  25.,  25.,  25., 100.],\n",
+    "        [ 75.,  75.,  75.,  75.,  75.],\n",
+    "        [ 25.,  75.,   0.,  75.,  75.]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.85836099, 1.67064465, 1.62576044, 1.40243961, 1.88454931], [1.75354326, 1.69403643, 1.36729252, 1.61415071, 1.12104981], [1.72201435, 1.1862918, 1.87078449, 1.7726778, 1.88180042]], [[1.44747908, 1.31673383, 1.02000951, 1.52218947, 1.97066381], [1.79129243, 1.74983003, 1.96028037, 1.85166831, 1.65450881], [1.18068344, 1.9587381, 1.00656599, 1.93402165, 1.73514584]]]\n",
+      "[[[75.0, 75.0, 75.0, 25.0, 75.0], [75.0, 75.0, 25.0, 25.0, 25.0], [75.0, 25.0, 75.0, 75.0, 75.0]], [[25.0, 25.0, 25.0, 25.0, 100.0], [75.0, 75.0, 75.0, 75.0, 75.0], [25.0, 75.0, 0.0, 75.0, 75.0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -539,20 +588,13 @@
     "\n",
     "Again, you don't need Numpy in this question."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ironhack_env",
    "language": "python",
-   "name": "python3"
+   "name": "ironhack_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -564,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
