The lab is done and checked

--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -34,18 +34,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = [######]\n",
-    "f = lambda x: #define the lambda expression\n",
-    "b = []\n",
-    "def modify_list(lst, fudduLambda):\n",
-    "    for x in ####:\n",
-    "        b.append(#####(x))\n",
-    "#Call modify_list(##,##)\n",
-    "#print b"
+    "list_f = [i for i in range(0,10)]\n",
+    "l_func = lambda x: x * 2\n",
+    "list_e = []\n",
+    "\n",
+    "def modify_list(list_e, l_func):\n",
+    "    for x in list_f:\n",
+    "        y = l_func(x)\n",
+    "        list_e.append(y)\n",
+    "modify_list(list_e, l_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list_e)"
    ]
   },
   {
@@ -59,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "celsius_to_kelvin = lambda x: (x + 273.15)/273.15"
    ]
   },
   {
@@ -76,13 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0439319055464031, 1.0842028189639392, 1.139117700896943, 0.7986454329123193, 1.087863811092806]\n"
+     ]
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "\n",
+    "temps_k = []\n",
+    "\n",
+    "for i in temps:\n",
+    "    temps_k.append(celsius_to_kelvin(i))\n",
+    "\n",
+    "print(temps_k)"
    ]
   },
   {
@@ -96,11 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "mod = lambda x: 1 if x % b == 0 else 0"
    ]
   },
   {
@@ -114,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +158,8 @@
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return lambda x: 1 if x % b == 0 else 0"
    ]
   },
   {
@@ -136,11 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "divisible5 = divisor(5)"
    ]
   },
   {
@@ -152,18 +188,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
@@ -183,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +253,7 @@
        " ('tomato', 'tomato')]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,14 +276,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (2, 3), (3, 4), (4, 5)]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1,2,3,4]\n",
     "list2 = [2,3,4,5]\n",
-    "## Zip the lists together \n",
-    "## Print the zipped list "
+    "\n",
+    "# Zip the lists together\n",
+    "zip_list = zip(list1, list2)\n",
+    "\n",
+    "# Print the zipped list \n",
+    "zip_list = list(zip_list)\n",
+    "print(zl) "
    ]
   },
   {
@@ -237,28 +308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\n\\ncompare = lambda ###: print(\"True\") if ### else print(\"False\")\\nfor ### in zip(list1,list2):\\n    compare(###)\\n    \\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
     }
    ],
    "source": [
-    "'''\n",
-    "\n",
-    "compare = lambda ###: print(\"True\") if ### else print(\"False\")\n",
-    "for ### in zip(list1,list2):\n",
-    "    compare(###)\n",
-    "    \n",
-    "'''    "
+    "compare = lambda x: True if (x[0] > x[1]) else False\n",
+    "for i in zl:\n",
+    "    print(compare(i))   "
    ]
   },
   {
@@ -274,14 +341,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Engineering', 'Lab'), ('Computer Science', 'Homework'), ('Political Science', 'Essay'), ('Mathematics', 'Module')]\n",
+      "[('Political Science', 'Essay'), ('Computer Science', 'Homework'), ('Engineering', 'Lab'), ('Mathematics', 'Module')]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "zipped_l = zip(list1, list2)\n",
+    "z_list = list(zipped_l)\n",
+    "print(z_list)\n",
+    "\n",
+    "\n",
+    "sorted_list = sorted(z_list, key = lambda x: x[1][0])\n",
+    "print(sorted_list)"
    ]
   },
   {
@@ -295,13 +378,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import OrderedDict\n",
+    "\n",
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "sorted_d = sorted(d.items(), key=lambda item: item[1])\n",
+    "d_sort = [elem[1] for elem in sorted_d]\n",
+    "\n",
+    "# Why trying to do this exercise ĩ found another way of doing it not using lambda's function.\n",
+    "# Since this way seemed to be easier and simpler, I'll leave it below.\n",
+    "# It only returns the sorted values of the dictionary.\n",
+    "sorted_d_not_lambda = sorted(d.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1995, 1997, 2001, 2005]\n",
+      "[1995, 1997, 2001, 2005]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d_sort)\n",
+    "print(sorted_d_not_lambda)"
    ]
   },
   {
@@ -328,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
